@@ -1,3 +1,6 @@
+* #4920: Harden _add_buddies to cope with no handle when calling
+  BuddyHandleJoined (morgs)
+
 Snapshot 4c8e8b71b5
 
 * #4896: Make subscribe/presence channel tracking not dependent on which order
